<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="user_display_name"
            app:defaultValue="@string/pref_default_display_name"
            app:persistent="true"
            app:title="@string/pref_title_display_name"
            android:inputType="textCapWords"
            app:useSimpleSummaryProvider="true"
            />

        <EditTextPreference
            app:key="user_email_address"
            app:defaultValue="@string/pref_default_email_address"
            app:persistent="true"
            android:inputType="textEmailAddress"
            app:title="@string/pref_title_email_address"
            app:useSimpleSummaryProvider="true"
            />

        <ListPreference
            app:defaultValue="@string/pref_default_favorite_social"
            app:entries="@array/pref_entries_favorite_social"
            app:entryValues="@array/pref_values_favorite_social"
            app:key="use_favorite_social"
            app:title="@string/pref_title_favorite_social"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <!--<PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>-->

    <PreferenceCategory
        app:title="Contact">
        <Preference
            app:key="web"
            app:title="@string/title_home_web">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>